adiciona localizaçao e empresa nos cards

--- a/Jobs-company/style.css
+++ b/Jobs-company/style.css
@@ -2,17 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: antiquewhite;
+  background-color: rgba(181, 236, 220, 0.109);
 }
 
 header {
   /* display: flex; */
-  /* justify-content: space-between; */
+  justify-content: space-between;
   align-items: center;
-  background-color: green;
-  margin: 20px 60px;
-  height: 250px;
-  padding: 100px;
+  /* background-color: green; */
+  /* margin: 20px 60px; */
+  height: 150px;
+  padding: 30px;
+  border-radius: 20px;
+  border: 10px solid green;
 }
 
 .title-image {
@@ -34,4 +36,20 @@ header {
 .form-header-option {
   height: 30px;
   font-size: 15px;
+}
+
+.results {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.job-card {
+    border: solid rgb(32, 114, 21) 1px;
+    margin: 20px;
+}
+
+.job-card:hover {
+    border: solid black 3px;
+    cursor: pointer;
 }
