--- a/Jobs-company/style.css
+++ b/Jobs-company/style.css
@@ -5,26 +5,23 @@
   background-color: rgba(181, 236, 220, 0.109);
 }
 
+body {
+  background-image: url(./images/undraw_Co-working_re_w93t.svg);
+}
+
 header {
-  /* display: flex; */
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: green; */
-  /* margin: 20px 60px; */
   height: 150px;
   padding: 30px;
-  border-radius: 20px;
-  border: 10px solid green;
+  border-radius: 10px;
+  border: 3px solid rgb(62, 66, 75);
 }
 
-.title-image {
-  display: flex;
-  align-items: center;
-}
-
-.section-form {
-  width: 80%;
-}
+/* .title-header {
+  margin-left: 150px;
+} */
 
 .form-header {
   display: flex;
@@ -44,13 +41,11 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
-    border: solid 1px black;
-    width: 40%
-    
+    border: 3px solid rgb(62, 66, 75);
 }
 
 .job-card {
-    border: solid rgb(32, 114, 21) 2px;
+    border: solid rgb(173, 173, 173) 2px;
     margin: 5px 3px;
     display: flex column;
     justify-content: center;
@@ -65,10 +60,6 @@ header {
     background-color: rgb(184, 250, 195);
 }
 
-.div-company-location {
-  display: flex;
-}
-
 .div-company-location p {
   margin: 2px;
   padding: 3px;
@@ -79,13 +70,13 @@ h3 {
   text-align: center;
 }
 
-.job-description {
+/* .job-description {
   position: relative;
   width: 50%;
   height: 50%;
   background-color: white;
   /* visibility: hidden; */
-}
+/* } */
 
 main {
   display: flex;
