--- a/Jobs-company/style.css
+++ b/Jobs-company/style.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgba(181, 236, 220, 0.109);
+  /* background-color: rgba(181, 236, 220, 0.109); */
+  /* background-color: rgb(40, 42, 47); */
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -37,27 +39,29 @@ header {
 }
 
 .results {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px;
-    border: 3px solid rgb(62, 66, 75);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
+  /* border: 3px solid rgb(62, 66, 75); */
 }
 
 .job-card {
-    border: solid rgb(173, 173, 173) 2px;
-    margin: 5px 3px;
-    display: flex column;
-    justify-content: center;
-    border-radius: 5px;
-    padding: 5px;
+  border: solid rgb(173, 173, 173) 2px;
+  margin: 5px 3px;
+  display: flex column;
+  justify-content: center;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: rgba(181, 236, 220, 0.109);
+  font-weight: bolder;
 }
 
 .job-card:hover {
-    border: solid black 3px;
-    cursor: pointer;
-    transition: 0.2s;
-    background-color: rgb(184, 250, 195);
+  border: solid black 3px;
+  cursor: pointer;
+  transition: 0.2s;
+  background-color: rgb(184, 250, 195);
 }
 
 .div-company-location p {
@@ -70,19 +74,27 @@ h3 {
   text-align: center;
 }
 
-/* .job-description {
-  position: relative;
-  width: 50%;
-  height: 50%;
-  background-color: white;
-  /* visibility: hidden; */
-/* } */
-
-main {
-  display: flex;
+.modal-title {
+  font-weight: bolder;
 }
 
-.selected-job {
-  max-width: 40%;
-  border: solid 1px black;
+.pop-up-style {
+  margin: 5px;
+}
+
+.btn-submit {
+  font-weight: bolder;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.div-btn {
+  vertical-align: middle;
+  text-align: center;
+}
+
+.loading {
+  text-align: center;
+  width: 100%;
+  margin: 50px auto;
 }
